************************
*** V1809
*** New solvers : groundwater2DFoam + groundwaterTransportFoam
************************

### Solvers

- groundwaterFoam

  - wellbore added to handle injection/extraction
  
- impesFoam/anisoImpesFoam/groundwaterFoam

  - wellboreProperies is a subDict of transportProperties
  - Winj/Wext (wellbore positions) are moved from 0/ to constant/

- porousScalarTransportFoam

  - retard coefficient "R" added
  - new time-stepping (using dCmax absolute and relative)

- groundwater2DFoam

  - new solver for 2D groundwater flow modeling (Dupuit's hypothesis)

- groundwaterTransportFoam

  - new solver coupling groundwaterFoam and porousScalarTransportFoam
  the C component is transported in fluid phase with variable saturation

### Libraries

- dispersionModels

  - alphaL/alphaT can be heterogeneous (volScalarField) in the

### Tutorials

- impesFoam/anisoImpesFoam

  - updated (wellboreProperties removed)

- groundwater2DFoam

  - 2 test case for solver validation

### Utilities

- setFieldsFromXY (replace setPermeabilityFieldFromXY)

  - can be used to initialize any volScalarFields from a rectangularMatrix
    (x | y | value) with linear interpolation between 3 closest points

************************
*** V1.6.0 (2018-05)
*** New model kr/pc Ippisch-Vogel-Bastian
************************

### Solvers

- groundwaterFoam

  - new time step managing (timeStep in controlDict) :
    - "Picard" is based on the number of Picard's iteration (old method)
    - "dthetadT" is based on the saturation variation at the previous time step 

- darcyFoam

  - moved to utility folder (now compute pressure field in the time folder with
  time iteration)

### Libraries

- capillary and relative permeability model

  - new Ippisch model (example in the tutorials/groundwaterFoam/realCase)

- boundary condtions for Head pressure (currently, gravity should be along the
  Z-axis). Computation are made at each time step, we recommend the use of the